# taurov-underwater-robot

./: README.md
src/mec319_bringup/: CMakeLists.txt  package.xml
src/mec319_bringup/launch/: mission.launch.py
src/mec319_interfaces/: CMakeLists.txt  package.xml
src/mec319_interfaces/msg/: Distance.msg  ObjectCoordinates.msg
src/mec319_pkg_cpp/: CMakeLists.txt  package.xml
src/mec319_pkg_cpp/src/: object_status_publisher.cpp
src/mec319_pkg_py/mec319_pkg_py/: movement.py  sonar_data_publisher.py
